[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "^2.3.2"
pymongo = "^4.6.1"
requests = "^2.31.0"
hostsman = "^1.1.5"
utils = "^1.0.1"
openai = "^1.3.7"
numpy = "^1.26.2"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
replit = "3.3.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"